--- a/package.json
+++ b/package.json
@@ -17,8 +17,6 @@
   },
   "dependencies": {
     "gatsby": "^4.17.2",
-    "gatsby-plugin-postcss": "^5.18.0",
-    "postcss": "^8.4.14",
     "react": "^18.1.0",
     "react-dom": "^18.1.0"
   },
@@ -26,6 +24,10 @@
     "@types/node": "^17.0.45",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
+    "autoprefixer": "^10.4.7",
+    "gatsby-plugin-postcss": "^5.18.0",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.1.4",
     "typescript": "^4.7.4"
   }
 }
