feat(app): add metatags and company logo

--- a/package.json
+++ b/package.json
@@ -17,13 +17,16 @@
   },
   "dependencies": {
     "gatsby": "^4.17.2",
+    "gatsby-plugin-react-helmet": "^5.19.0",
     "react": "^18.1.0",
-    "react-dom": "^18.1.0"
+    "react-dom": "^18.1.0",
+    "react-helmet": "^6.1.0"
   },
   "devDependencies": {
     "@types/node": "^17.0.45",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
+    "@types/react-helmet": "^6.1.5",
     "autoprefixer": "^10.4.7",
     "gatsby-plugin-postcss": "^5.18.0",
     "postcss": "^8.4.14",
